--- a/studio.html
+++ b/studio.html
@@ -121,7 +121,7 @@
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase">
                     <li class="breadcrumb-item"><a class="text-white" href="index.html">Home</a></li>
-                    <li class="breadcrumb-item text-white active" aria-current="page">Store</li>
+                    <li class="breadcrumb-item text-white active" aria-current="page">Studio</li>
                 </ol>
             </nav>
         </div>
