--- a/studio.html
+++ b/studio.html
@@ -117,7 +117,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header mb-5 py-5">
         <div class="container">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">Creatv Store</h1>
+            <h1 class="display-3 text-white mb-3 animated slideInDown">Creatv Studio</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase">
                     <li class="breadcrumb-item"><a class="text-white" href="index.html">Home</a></li>
@@ -131,7 +131,7 @@
     <!-- Creatv Studio Start -->
     <section id="creatv-store" class="creatv-store-section">
         <div class="container">
-            <h2 class="section-title text-center mb-5">Creatv Store</h2>
+            <h2 class="section-title text-center mb-5">Creatv Studio</h2>
             <div class="product-grid">
                 <div class="item">
                     <div class="single-creatv-product">
