--- a/medali.html
+++ b/medali.html
@@ -129,11 +129,11 @@
     <!-- Page Header End -->
 
     <!-- Creatv Store Start -->
-    <section id="creatv-store" class="creatv-store-section">
+    <section id="cool-store" class="cool-store-section">
         <div class="container">
             <div class="product-grid">
                 <div class="item">
-                    <div class="single-creatv-product wow animate__animated animate__fadeInUp">
+                    <div class="single-cool-product wow animate__animated animate__fadeInUp">
                         <div class="product-image">
                             <img src="img/medali1.jpg" alt="Product 1" onclick="openModal('img/medali1.jpg')">
                         </div>
@@ -145,9 +145,21 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="single-creatv-product wow animate__animated animate__fadeInUp">
+                    <div class="single-cool-product wow animate__animated animate__fadeInUp">
                         <div class="product-image">
-                            <img src="img/medali2.jpg" alt="Product 1" onclick="openModal('img/medali2.jpg')">
+                            <img src="img/medali2.jpg" alt="Product 1" onclick="openModal('img/medali1.jpg')">
+                        </div>
+                        <div class="product-details">
+                            <h3>Product 1</h3>
+                            <p>Description of Product 1</p>
+                            <a href="#" class="btn btn-primary">View Details</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="single-cool-product wow animate__animated animate__fadeInUp">
+                        <div class="product-image">
+                            <img src="img/medali3.jpg" alt="Product 1" onclick="openModal('img/medali1.jpg')">
                         </div>
                         <div class="product-details">
                             <h3>Product 1</h3>
