--- a/studio.html
+++ b/studio.html
@@ -90,9 +90,9 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Product</a>
                         <div class="dropdown-menu fade-up m-0">
                             <a href="medali" class="dropdown-item">Medali</a>
+                            <a href="rapot.html" class="dropdown-item">Map Rapot/Ijazah</a>
                             <a href="null" class="dropdown-item">null</a>
-                            <a href="testimonial.html" class="dropdown-item">null</a>
-                            <a href="404.html" class="dropdown-item">null</a>
+                            <a href="null" class="dropdown-item">null</a>
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
