--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Creatv.IDs</title>
+    <title>Creatv.ID</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="keywords" content="Samarinda, creatv.id, Perlengkapan sekolah, Atribut sekolah, Seragam sekolah, Map rapot, Medali perpisahan, Bordiran nama, Topi sekolah, Dasi sekolah, Kaos kaki sekolah, Dokumentasi acara sekolah, Fotografi acara sekolah, Yearbook, Kalender sekolah, Promosi sekolah, Layanan fotografi sekolah, Layanan dokumentasi acara, Pemotretan kelas, Pemotretan guru, Kalender promosi, Kreativitas sekolah">
     <meta name="description" content="Creatv adalah destinasi utama untuk perlengkapan sekolah dan dokumentasi acara sekolah di Samarinda. Temukan seragam, map rapot, medali perpisahan, dan layanan fotografi serta pembuatan yearbook dan kalender sekolah. Dengan pengalaman lebih dari 10 tahun, kami menjadi pilihan terbaik bagi sekolah-sekolah di Samarinda.">
