--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                 <h5 class="text-white text-uppercase mb-3 animated slideInDown">Creatv Store</h5>
                                 <h1 class="display-3 text-white animated slideInDown mb-4">Supplier beberapa kebutuhan dan atribut sekolah</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">Creatv Store adalah Supplier terpercaya untuk perlengkapan sekolah dengan pengalaman lebih dari 10 tahun. Kami menyediakan berbagai macam produk seperti map rapot, medali perpisahan, seragam sekolah, jaket/baju angkatan, buku tahunan, kalender sekolah, dan aksesori lainnya. Layanan bordiran nama, kelas, bendera, dan lokasi. Dengan puluhan sekolah di Samarinda sebagai pelanggan setia, kami bangga menjadi bagian dari perjalanan sekolah mereka.</p>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
+                                <a href="store" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">View Product</a>
                                 <a href="https://wa.me/6281217817470" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">WhatsApp</a>
                             </div>
                         </div>
@@ -141,7 +141,7 @@
                                 <h5 class="text-white text-uppercase mb-3 animated slideInDown">Creatv Studio</h5>
                                 <h1 class="display-3 text-white animated slideInDown mb-4">Jasa dokumentasi acara-acara Sekolah</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">Creatv Studio adalah mitra dokumentasi acara sekolah Anda yang telah berpengalaman lebih dari 10 tahun. Kami menyediakan layanan dokumentasi untuk berbagai acara, seperti Graduation, Farewell Party, dan lainnya. Dengan berbagai produk seperti dokumentasi acara, pas foto, buku tahunan, dan kalender sekolah, kami siap membantu Anda menciptakan kenangan yang tak terlupakan. Bergabunglah dengan puluhan sekolah yang telah mempercayai kami untuk momen berharga mereka di Creatv Studio!</p>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
+                                <a href="studio" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">View Product</a>
                                 <a href="https://wa.me/6281217817470" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">WhatsApp</a>
                             </div>
                         </div>
@@ -193,7 +193,7 @@
                     <div class="product-details">
                         <h3>Map rapot</h3>
                         <p>Description of Product 1</p>
-                        <a href="map" class="btn btn-primary">View Details</a>
+                        <a href="rapot" class="btn btn-primary">View Details</a>
                     </div>
                 </div>
             </div>
