--- a/rapot.html
+++ b/rapot.html
@@ -168,6 +168,46 @@
         <img class="modal-content" id="modal-image">
     </div>
 
+    <!-- Testimonial Section -->
+<section class="testimonial-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="testimonial-carousel owl-carousel">
+                    <div class="testimonial-item">
+                        <div class="testimonial-image">
+                            <img src="testimonial1.jpg" alt="Testimonial Image">
+                        </div>
+                        <div class="testimonial-text">
+                            <p>"Produk ini sungguh luar biasa! Saya sangat puas dengan kualitasnya."</p>
+                            <h3>John Doe</h3>
+                        </div>
+                    </div>
+                    <div class="testimonial-item">
+                        <div class="testimonial-image">
+                            <img src="testimonial2.jpg" alt="Testimonial Image">
+                        </div>
+                        <div class="testimonial-text">
+                            <p>"Pengiriman cepat dan produk sesuai dengan deskripsi. Terima kasih!"</p>
+                            <h3>Jane Smith</h3>
+                        </div>
+                    </div>
+                    <div class="testimonial-item">
+                        <div class="testimonial-image">
+                            <img src="testimonial3.jpg" alt="Testimonial Image">
+                        </div>
+                        <div class="testimonial-text">
+                            <p>"Saya sudah membeli beberapa kali dan tidak pernah kecewa dengan produknya."</p>
+                            <h3>David Johnson</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
