--- a/rapot.html
+++ b/rapot.html
@@ -171,6 +171,7 @@
     <!-- Testimonial Section -->
 <section class="testimonial-section">
     <div class="container">
+        <h2 class="section-title text-center mb-5">Beberapa Sekolah telah mempercayai kami</h2>
         <div class="row">
             <div class="col-lg-12">
                 <div class="testimonial-carousel owl-carousel">
