--- a/medali.html
+++ b/medali.html
@@ -129,11 +129,11 @@
     <!-- Page Header End -->
 
     <!-- Creatv Store Start -->
-    <section id="cool-store" class="cool-store-section">
+    <section id="creatv-store" class="creatv-store-section">
         <div class="container">
             <div class="product-grid">
                 <div class="item">
-                    <div class="single-cool-product wow animate__animated animate__fadeInUp">
+                    <div class="single-creatv-product">
                         <div class="product-image">
                             <img src="img/medali1.jpg" alt="Product 1" onclick="openModal('img/medali1.jpg')">
                         </div>
@@ -145,7 +145,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="single-cool-product wow animate__animated animate__fadeInUp">
+                    <div class="single-creatv-product">
                         <div class="product-image">
                             <img src="img/medali2.jpg" alt="Product 1" onclick="openModal('img/medali1.jpg')">
                         </div>
