--- a/medali.html
+++ b/medali.html
@@ -145,7 +145,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="single-creatv-product">
+                    <div class="single-creatv-product wow animate__animated animate__fadeInUp">
                         <div class="product-image">
                             <img src="img/medali2.jpg" alt="Product 1" onclick="openModal('img/medali1.jpg')">
                         </div>
@@ -157,7 +157,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="single-cool-product wow animate__animated animate__fadeInUp">
+                    <div class="single-creatv-product wow animate__animated animate__fadeInUp">
                         <div class="product-image">
                             <img src="img/medali3.jpg" alt="Product 1" onclick="openModal('img/medali1.jpg')">
                         </div>
