--- a/store.html
+++ b/store.html
@@ -133,7 +133,7 @@
             <h2 class="section-title text-center mb-5">Creatv Store</h2>
             <div class="product-grid">
                 <div class="item">
-                    <div class="single-creatv-product">
+                    <div class="single-creatv-product wow animate__animated animate__fadeInUp">
                         <div class="product-image">
                             <img src="img/productstore-1.jpg" alt="Product 1">
                         </div>
@@ -145,7 +145,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="single-creatv-product">
+                    <div class="single-creatv-product wow animate__animated animate__fadeInUp">
                         <div class="product-image">
                             <img src="img/productstore-2.jpg" alt="Product 1">
                         </div>
@@ -157,7 +157,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="single-creatv-product">
+                    <div class="single-creatv-product wow animate__animated animate__fadeInUp">
                         <div class="product-image">
                             <img src="img/productstore-3.jpg" alt="Product 1">
                         </div>
@@ -169,7 +169,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="single-creatv-product">
+                    <div class="single-creatv-product wow animate__animated animate__fadeInUp">
                         <div class="product-image">
                             <img src="img/productstore-4.jpg" alt="Product 1">
                         </div>
@@ -181,7 +181,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="single-creatv-product">
+                    <div class="single-creatv-product wow animate__animated animate__fadeInUp">
                         <div class="product-image">
                             <img src="img/productstore-5.jpg" alt="Product 1">
                         </div>
