--- a/rapot.html
+++ b/rapot.html
@@ -133,7 +133,7 @@
         <div class="container">
             <div class="product-grid">
                 <div class="item">
-                    <div class="single-creatv-product">
+                    <div class="single-creatv-product wow animate__animated animate__fadeInUp">
                         <div class="product-image">
                             <img src="img/rapot1.jpg" alt="Product 1" onclick="openModal('img/medali1.jpg')">
                         </div>
@@ -145,7 +145,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="single-creatv-product">
+                    <div class="single-creatv-product wow animate__animated animate__fadeInUp">
                         <div class="product-image">
                             <img src="img/rapot2.jpg" alt="Product 1" onclick="openModal('img/medali1.jpg')">
                         </div>
