--- a/studio.html
+++ b/studio.html
@@ -134,7 +134,7 @@
             <h2 class="section-title text-center mb-5">Creatv Studio</h2>
             <div class="product-grid">
                 <div class="item">
-                    <div class="single-creatv-product">
+                    <div class="single-creatv-product wow animate__animated animate__fadeInUp">
                         <div class="product-image">
                             <img src="img/productstudio-1.jpg" alt="Product 1">
                         </div>
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="single-creatv-product">
+                    <div class="single-creatv-product wow animate__animated animate__fadeInUp">
                         <div class="product-image">
                             <img src="img/productstudio-2.jpg" alt="Product 1">
                         </div>
@@ -158,7 +158,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="single-creatv-product">
+                    <div class="single-creatv-product wow animate__animated animate__fadeInUp">
                         <div class="product-image">
                             <img src="img/productstudio-3.jpg" alt="Product 1">
                         </div>
@@ -170,7 +170,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="single-creatv-product">
+                    <div class="single-creatv-product wow animate__animated animate__fadeInUp">
                         <div class="product-image">
                             <img src="img/productstudio-4.jpg" alt="Product 1">
                         </div>
