--- a/medali.html
+++ b/medali.html
@@ -189,16 +189,16 @@
                 <div class="testimonial-carousel owl-carousel">
                     <div class="testimonial-item">
                         <div class="testimonial-image">
-                            <img src="testimonial1.jpg" alt="Testimonial Image">
+                            <img src="img/testimonial1.jpg" alt="Testimonial Image">
                         </div>
                         <div class="testimonial-text">
-                            <p>"Produk ini sungguh luar biasa! Saya sangat puas dengan kualitasnya."</p>
-                            <h3>John Doe</h3>
+                            <p>"Pembuatan Buku Tata Tertib Siswa</p>
+                            <h3>SMPN 24 SAMARINDA</h3>
                         </div>
                     </div>
                     <div class="testimonial-item">
                         <div class="testimonial-image">
-                            <img src="testimonial2.jpg" alt="Testimonial Image">
+                            <img src="img/testimonial1.jpg" alt="Testimonial Image">
                         </div>
                         <div class="testimonial-text">
                             <p>"Pengiriman cepat dan produk sesuai dengan deskripsi. Terima kasih!"</p>
@@ -207,7 +207,7 @@
                     </div>
                     <div class="testimonial-item">
                         <div class="testimonial-image">
-                            <img src="testimonial3.jpg" alt="Testimonial Image">
+                            <img src="img/testimonial1.jpg" alt="Testimonial Image">
                         </div>
                         <div class="testimonial-text">
                             <p>"Saya sudah membeli beberapa kali dan tidak pernah kecewa dengan produknya."</p>
