--- a/medali.html
+++ b/medali.html
@@ -192,7 +192,7 @@
                             <img src="img/testimonial1.jpg" alt="Testimonial Image">
                         </div>
                         <div class="testimonial-text">
-                            <p>"Pembuatan Buku Tata Tertib Siswa</p>
+                            <p>Pembuatan Buku Tata Tertib Siswa</p>
                             <h3>SMPN 24 SAMARINDA</h3>
                         </div>
                     </div>
