--- a/medali.html
+++ b/medali.html
@@ -196,24 +196,52 @@
                             <h3>SMPN 24 SAMARINDA</h3>
                         </div>
                     </div>
-                    <div class="testimonial-item">
+                    <div class="testimonia-item">
                         <div class="testimonial-image">
-                            <img src="img/testimonial1.jpg" alt="Testimonial Image">
+                            <img src="img/testimonial2.jpg" alt="Testimonial Image">
                         </div>
                         <div class="testimonial-text">
-                            <p>"Pengiriman cepat dan produk sesuai dengan deskripsi. Terima kasih!"</p>
-                            <h3>Jane Smith</h3>
+                            <p>Orderan Pas Foto Siswa</p>
+                            <h3>Nama Sekolahan</h3>
                         </div>
                     </div>
                     <div class="testimonial-item">
                         <div class="testimonial-image">
-                            <img src="img/testimonial1.jpg" alt="Testimonial Image">
+                            <img src="img/testimonial3.jpg" alt="Testimonial Image">
                         </div>
                         <div class="testimonial-text">
-                            <p>"Saya sudah membeli beberapa kali dan tidak pernah kecewa dengan produknya."</p>
-                            <h3>David Johnson</h3>
+                            <p>Orderan bordir tanda kelas."</p>
+                            <h3>Nama Sekolahan</h3>
                         </div>
                     </div>
+                    <div class="testimonial-item">
+                        <div class="testimonial-image">
+                            <img src="img/testimonial4.jpg" alt="Testimonial Image">
+                        </div>
+                        <div class="testimonial-text">
+                            <p>Orderan ."</p>
+                            <h3>Nama Sekolahan</h3>
+                        </div>
+                    </div>
+                    <div class="testimonial-item">
+                        <div class="testimonial-image">
+                            <img src="img/testimonial4.jpg" alt="Testimonial Image">
+                        </div>
+                        <div class="testimonial-text">
+                            <p>Orderan ."</p>
+                            <h3>Nama Sekolahan</h3>
+                        </div>
+                    </div>
+                    <div class="testimonial-item">
+                        <div class="testimonial-image">
+                            <img src="img/testimonial5.jpg" alt="Testimonial Image">
+                        </div>
+                        <div class="testimonial-text">
+                            <p>Orderan Seragam Sekolah."</p>
+                            <h3>SDN 007 SAMARINDA SEBERANG</h3>
+                        </div>
+                    </div>
+                    <!-- Add More -->
                 </div>
             </div>
         </div>
