--- a/medali.html
+++ b/medali.html
@@ -180,7 +180,7 @@
         <img class="modal-content" id="modal-image">
     </div>
 
-    <!-- Testimonial Section -->
+<!-- Testimonial Section -->
 <section class="testimonial-section">
     <div class="container">
         <h2 class="section-title text-center mb-5">Beberapa Sekolah telah mempercayai kami</h2>
@@ -196,7 +196,7 @@
                             <h3>SMPN 24 SAMARINDA</h3>
                         </div>
                     </div>
-                    <div class="testimonia-item">
+                    <div class="testimonial-item">
                         <div class="testimonial-image">
                             <img src="img/testimonial2.jpg" alt="Testimonial Image">
                         </div>
@@ -238,6 +238,7 @@
         </div>
     </div>
 </section>
+
 
 
 
