--- a/rapot.html
+++ b/rapot.html
@@ -168,7 +168,7 @@
         <img class="modal-content" id="modal-image">
     </div>
 
-    <!-- Testimonial Section -->
+<!-- Testimonial Section -->
 <section class="testimonial-section">
     <div class="container">
         <h2 class="section-title text-center mb-5">Beberapa Sekolah telah mempercayai kami</h2>
@@ -177,37 +177,56 @@
                 <div class="testimonial-carousel owl-carousel">
                     <div class="testimonial-item">
                         <div class="testimonial-image">
-                            <img src="testimonial1.jpg" alt="Testimonial Image">
+                            <img src="img/testimonial1.jpg" alt="Testimonial Image">
                         </div>
                         <div class="testimonial-text">
-                            <p>"Produk ini sungguh luar biasa! Saya sangat puas dengan kualitasnya."</p>
-                            <h3>John Doe</h3>
+                            <p>Pembuatan Buku Tata Tertib Siswa</p>
+                            <h3>SMPN 24 SAMARINDA</h3>
                         </div>
                     </div>
                     <div class="testimonial-item">
                         <div class="testimonial-image">
-                            <img src="testimonial2.jpg" alt="Testimonial Image">
+                            <img src="img/testimonial2.jpg" alt="Testimonial Image">
                         </div>
                         <div class="testimonial-text">
-                            <p>"Pengiriman cepat dan produk sesuai dengan deskripsi. Terima kasih!"</p>
-                            <h3>Jane Smith</h3>
+                            <p>Orderan Pas Foto Siswa</p>
+                            <h3>Nama Sekolahan</h3>
                         </div>
                     </div>
                     <div class="testimonial-item">
                         <div class="testimonial-image">
-                            <img src="testimonial3.jpg" alt="Testimonial Image">
+                            <img src="img/testimonial3.jpg" alt="Testimonial Image">
                         </div>
                         <div class="testimonial-text">
-                            <p>"Saya sudah membeli beberapa kali dan tidak pernah kecewa dengan produknya."</p>
-                            <h3>David Johnson</h3>
+                            <p>Orderan bordir tanda kelas."</p>
+                            <h3>Nama Sekolahan</h3>
                         </div>
                     </div>
+                    <div class="testimonial-item">
+                        <div class="testimonial-image">
+                            <img src="img/testimonial4.jpg" alt="Testimonial Image">
+                        </div>
+                        <div class="testimonial-text">
+                            <p>Orderan ."</p>
+                            <h3>Nama Sekolahan</h3>
+                        </div>
+                    </div>
+                    <div class="testimonial-item">
+                        <div class="testimonial-image">
+                            <img src="img/testimonial5.jpg" alt="Testimonial Image">
+                        </div>
+                        <div class="testimonial-text">
+                            <p>Orderan Seragam Sekolah."</p>
+                            <h3>SDN 007 SAMARINDA SEBERANG</h3>
+                        </div>
+                    </div>
+                    <!-- Add More -->
                 </div>
             </div>
         </div>
     </div>
 </section>
-
+<!-- Testimonial End -->
 
 
     <!-- Footer Start -->
