--- a/medali.html
+++ b/medali.html
@@ -192,8 +192,8 @@
                             <img src="img/testimonial1.jpg" alt="Testimonial Image">
                         </div>
                         <div class="testimonial-text">
-                            <p>Pembuatan Buku Tata Tertib Siswa</p>
                             <h3>SMPN 24 SAMARINDA</h3>
+                            <p>Pembuatan Buku Tata Tertib Siswa</p>
                         </div>
                     </div>
                     <div class="testimonial-item">
@@ -201,8 +201,8 @@
                             <img src="img/testimonial2.jpg" alt="Testimonial Image">
                         </div>
                         <div class="testimonial-text">
-                            <p>Orderan Pas Foto Siswa</p>
                             <h3>Nama Sekolahan</h3>
+                            <p>Orderan Pas Foto Siswa</p>
                         </div>
                     </div>
                     <div class="testimonial-item">
@@ -210,8 +210,8 @@
                             <img src="img/testimonial3.jpg" alt="Testimonial Image">
                         </div>
                         <div class="testimonial-text">
-                            <p>Orderan bordir tanda kelas."</p>
                             <h3>Nama Sekolahan</h3>
+                            <p>Orderan bordir tanda kelas</p>
                         </div>
                     </div>
                     <div class="testimonial-item">
@@ -219,8 +219,8 @@
                             <img src="img/testimonial4.jpg" alt="Testimonial Image">
                         </div>
                         <div class="testimonial-text">
-                            <p>Orderan ."</p>
                             <h3>Nama Sekolahan</h3>
+                            <p>Orderan .</p>
                         </div>
                     </div>
                     <div class="testimonial-item">
@@ -228,8 +228,8 @@
                             <img src="img/testimonial5.jpg" alt="Testimonial Image">
                         </div>
                         <div class="testimonial-text">
-                            <p>Orderan Seragam Sekolah."</p>
                             <h3>SDN 007 SAMARINDA SEBERANG</h3>
+                            <p>Orderan Seragam Sekolah</p>
                         </div>
                     </div>
                     <!-- Add More -->
@@ -238,7 +238,6 @@
         </div>
     </div>
 </section>
-
 
 
 
