--- a/rapot.html
+++ b/rapot.html
@@ -89,7 +89,7 @@
                         <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Product</a>
                         <div class="dropdown-menu fade-up m-0">
                             <a href="medali" class="dropdown-item">Medali</a>
-                            <a href="#" class="dropdown-item active">Rapot</a>
+                            <a href="#" class="dropdown-item active">Map Rapot/Ijazah</a>
                             <a href="null" class="dropdown-item">null</a>
                             <a href="null" class="dropdown-item">null</a>
                         </div>
@@ -121,7 +121,7 @@
                 <ol class="breadcrumb text-uppercase">
                     <li class="breadcrumb-item"><a class="text-white" href="index.html">Home</a></li>
                     <li class="breadcrumb-item"><a class="text-white" href="#">Product</a></li>
-                    <li class="breadcrumb-item text-white active" aria-current="page">Medali</li>
+                    <li class="breadcrumb-item text-white active" aria-current="page">Map Rapot/Ijazah</li>
                 </ol>
             </nav>
         </div>
